Fix install layout issue

--- a/styles/scroll-percentage.less
+++ b/styles/scroll-percentage.less
@@ -1,5 +1,1 @@
-.scroll-percentage {
-  color: white;
-  position: fixed;
-  padding-left: 15px;
-}
+#scroll-percentage {}
